# RunScope

./: .gitignore  CMakeLists.txt  README.md  install_deps.sh
.github/workflows/: cmake-multi-platform.yml
docs/: PROCESS_ATTACHMENT.md  USER_GUIDE.md
examples/: CMakeLists.txt  attach_test.cpp  basic_example.cpp  profiler_app.cpp  target_app.cpp
include/runscope/: exporter.hpp  imgui_visualizer.hpp  process_manager.hpp  profile_data.hpp  profiler.hpp  runscope.hpp  runscope_v2.hpp  timer.hpp
include/runscope/analysis/: statistics.hpp
include/runscope/core/: clock.hpp  profile_entry.hpp  profiler_engine.hpp  profiler_session.hpp  scope_profiler.hpp  types.hpp
include/runscope/export/: exporter.hpp
include/runscope/platform/: process_attacher.hpp  process_info.hpp
include/runscope/ui/: profiler_ui.hpp
src/: CMakeLists.txt  exporter.cpp  imgui_visualizer.cpp
src/analysis/: statistics.cpp
src/core/: clock.cpp  profiler_engine.cpp  profiler_session.cpp  scope_profiler.cpp
src/export/: exporter.cpp
src/platform/: process_attacher.cpp  process_enumerator.cpp
src/ui/: profiler_ui.cpp
tests/: CMakeLists.txt  test_exporter.cpp  test_process_manager.cpp  test_profiler.cpp  test_timer.cpp
